:lipstick: Fix all broken UI issues of add place form

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,29 @@
-@import "~bootstrap/scss/bootstrap";
+.page-header {
+	h1 {
+		font-size: 24px;
+		font-weight: 700;
+		text-align: center;
+	}
+}
+
+.form-group {
+	margin-bottom: 20px;
+}
+
+.form-control {
+	height: 40px;
+}
+
+.row {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+}
+
+input[type="file"] {
+	cursor: pointer;
+
+	&:focus {
+		outline: 0;
+	}
+}
